--- a/examples/branch-from-environment.yml
+++ b/examples/branch-from-environment.yml
@@ -42,8 +42,10 @@ jobs:
         # Here is where we are setting the environment variable!
         echo "::set-env name=PULL_REQUEST_FROM_BRANCH::${BRANCH_FROM}"
 
+    # Important! Update to a released version instead of master 
+    # https://github.com/vsoch/pull-request-action/releases/
     - name: Open Pull Request
-      uses: vsoch/pull-request-action@1.0.6
+      uses: vsoch/pull-request-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PULL_REQUEST_BRANCH: "master"
