--- a/examples/push-example.yml
+++ b/examples/push-example.yml
@@ -10,8 +10,10 @@ jobs:
     name: PullRequestAction
     runs-on: ubuntu-latest
     steps:
+        # Important! Update to a released version instead of master 
+        # https://github.com/vsoch/pull-request-action/releases/
       - name: pull-request-action
-        uses: vsoch/pull-request-action@add/support-null-branch
+        uses: vsoch/pull-request-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_PREFIX: "update/"
