--- a/examples/custom-body-example.yml
+++ b/examples/custom-body-example.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Set PR body
         run: echo "PULL_REQUEST_BODY=${{steps.set-pr-body.outputs.result}}" >> $GITHUB_ENV
       - name: pull-request-action
-        uses: vsoch/pull-request-action@1.0.10
+        uses: vsoch/pull-request-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_PREFIX: "hotfix-"
