--- a/examples/outputs-example.yml
+++ b/examples/outputs-example.yml
@@ -18,8 +18,7 @@ jobs:
         PULL_REQUEST_REVIEWERS: vsoch
     - name: Test outputs
       env:
-        pull_request_number_output: ${{ steps.pull_request.outputs.pull_request_number
-          }}
+        pull_request_number_output: ${{ steps.pull_request.outputs.pull_request_number }}
         pull_request_url_output: ${{ steps.pull_request.outputs.pull_request_url }}
       run: |
         echo "Pull request number from output: ${pull_request_number_output}"
