--- a/examples/outputs-example.yml
+++ b/examples/outputs-example.yml
@@ -2,27 +2,27 @@ name: Pull Request on Branch Push
 on:
   push:
     branches-ignore:
-      - devel
+    - devel
 jobs:
   auto-pull-request:
     name: PullRequestAction
     runs-on: ubuntu-latest
     steps:
-      - name: pull-request-action
-        id: pull_request
-        uses: vsoch/pull-request-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_PREFIX: "update/"
-          PULL_REQUEST_BRANCH: "master"
-          PULL_REQUEST_REVIEWERS: vsoch
-      - name: Test outputs
-        env:
-          pull_request_number_output: ${{ steps.pull_request.outputs.pull_request_number }}
-          pull_request_url_output: ${{ steps.pull_request.outputs.pull_request_url }}
-        run: |
-          echo "Pull request number from output: ${pull_request_number_output}"
-          echo "Pull request url from output: ${pull_request_url_output}"
-          echo "Pull request number from environment: ${PULL_REQUEST_NUMBER}"
-          echo "Pull request url from environment: ${PULL_REQUEST_URL}"
-          echo "Another way to specify from output ${{ steps.pull_request.outputs.pull_request_number }}"
+    - name: pull-request-action
+      id: pull_request
+      uses: vsoch/pull-request-action@d703f40f3af5ae294f9816395ddf2e3d2d3feafa # 1.0.21
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH_PREFIX: update/
+        PULL_REQUEST_BRANCH: master
+        PULL_REQUEST_REVIEWERS: vsoch
+    - name: Test outputs
+      env:
+        pull_request_number_output: ${{ steps.pull_request.outputs.pull_request_number }}
+        pull_request_url_output: ${{ steps.pull_request.outputs.pull_request_url }}
+      run: |
+        echo "Pull request number from output: ${pull_request_number_output}"
+        echo "Pull request url from output: ${pull_request_url_output}"
+        echo "Pull request number from environment: ${PULL_REQUEST_NUMBER}"
+        echo "Pull request url from environment: ${PULL_REQUEST_URL}"
+        echo "Another way to specify from output ${{ steps.pull_request.outputs.pull_request_number }}"
